[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Enemies/spikeMan_walk1.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Enemies/spikeMan_walk2.png" type="Texture" id=2]
[ext_resource path="res://juego/enemigos/Pinchon.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.2819, 2.56374 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.5227
height = 7.06355

[node name="Pinchon" type="KinematicBody2D"]
position = Vector2( 0.668175, 0.8909 )
z_index = 35
z_as_relative = false
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.259888, -39.9467 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "caminar"

[node name="DetectorVacio" type="RayCast2D" parent="AnimatedSprite"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
position = Vector2( 83.7346, 50.4947 )
scale = Vector2( 2, 2 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="ColisionPies" type="CollisionShape2D" parent="."]
position = Vector2( 1.55907, -4.23177 )
shape = SubResource( 2 )

[node name="DetectorJugador" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador"]
position = Vector2( 0.222725, -28.5088 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorJugador"]
polygon = PoolVector2Array( -9.20879, -50.6723, 9.72281, -50.0041, 0.368378, -77.3993 )

[node name="DetectorPared" type="RayCast2D" parent="."]
position = Vector2( 27.8406, -27.6179 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 4

[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
